5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1674_1104.log
== TEST (2019-05-02 02:29:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if(((c<=a)and(a<=d))or((c<=b)and(<=d))):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif(((a<=c)and(c<=b))or((a<=d)and(d<=b))):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)and(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
	
		
		
-- ERROR:
File "XXXX", line 9
    if(((c<=a)and(a<=d))or((c<=b)and(<=d))):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:29:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if(((c<=a)and(a<=d))or((c<=b)and(b<=d))):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif(((a<=c)and(c<=b))or((a<=d)and(d<=b))):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)and(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
	
		
		
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:29:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if(((c<=a)and(a<=d))or((c<=b)and(b<=d))):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif(((a<=c)and(c<=b))or((a<=d)and(d<=b))):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)and(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
	
		
		
-- EXECUTION TIME:
0.166353
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:30:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if(((c<=a)and(a<=d))or((c<=b)and(b<=d))):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif(((a<=c)and(c<=b))or((a<=d)and(d<=b))):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)and(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
else:
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Nao ha intersecao")
	
	
		
		
-- EXECUTION TIME:
0.148769
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:38:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if((c<=a)and(a<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((c<=b)and(b<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=c)and(c<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=d)and(d<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)and(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
else:
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Nao ha intersecao")
	
	
		
		
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:38:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if((c<=a)and(a<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((c<=b)and(b<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=c)and(c<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=d)and(d<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)and(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
else:
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Nao ha intersecao")
	
	
		
		
-- EXECUTION TIME:
0.144044
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:38:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if((c<=a)and(a<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((c<=b)and(b<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=c)and(c<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=d)and(d<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)and(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
else:
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Nao ha intersecao")
	
	
		
		
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:39:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if((c<=a)and(a<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((c<=b)and(b<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=c)and(c<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=d)and(d<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)or(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
else:
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Nao ha intersecao")
	
	
		
		
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:39:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if((c<=a)and(a<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((c<=b)and(b<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=c)and(c<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=d)and(d<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)or(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
else:
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Nao ha intersecao")
	
	
		
		
-- EXECUTION TIME:
0.117166
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:40:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if((c<=a)and(a<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((c<=b)and(b<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=c)and(c<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=d)and(d<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)or(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
else:
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Nao ha intersecao")
	
	
		
		
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:40:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if((c<=a)and(a<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((c<=b)and(b<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=c)and(c<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=d)and(d<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)or(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
else:
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Nao ha intersecao")
	
	
		
		
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:40:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("Digite um numero para a:"))
b = float(input("Digite um numero para b:"))
c = float(input("Digite um numero para c:"))
d = float(input("Digite um numero para d:"))
if ((b>a)and(d>c)):
	if((c<=a)and(a<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((c<=b)and(b<=d)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=c)and(c<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	elif((a<=d)and(d<=b)):
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ",a,",",b)
		print("Intervalo 2: ",c,",",d)
		print("Nao ha intersecao")
elif((b<=a)or(d<=c)):
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Entradas invalidas")
else:
	print("Intervalo 1: ",a,",",b)
	print("Intervalo 2: ",c,",",d)
	print("Nao ha intersecao")
	
	
		
		
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
